--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             border: 1px solid black;
             font-size: 100px;
         }
+
+        body{
+            background-color: aliceblue;
+        }
     </style>
 </head>
 
