--- a/index.html
+++ b/index.html
@@ -6,43 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .fila {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 5px;
-            padding-bottom: 5px;
-        }
-
-        .casilla {
-            width: 200px;
-            height: 200px;
-            border: 1px solid black;
-            font-size: 100px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container" id="contenedor">
         <div class="fila">
-            <div onclick="PonerFicha()" class="casilla"></div>
-            <div onclick="PonerFicha()" class="casilla"></div>
-            <div onclick="PonerFicha()" class="casilla"></div>
+            <div class="casilla"></div>
+            <div class="casilla"></div>
+            <div class="casilla"></div>
         </div>
         <div class="fila">
-            <div onclick="PonerFicha()" class="casilla"></div>
-            <div onclick="PonerFicha()" class="casilla"></div>
-            <div onclick="PonerFicha()" class="casilla"></div>
+            <div class="casilla"></div>
+            <div class="casilla"></div>
+            <div class="casilla"></div>
         </div>
         <div class="fila">
-            <div onclick="PonerFicha()" class="casilla"></div>
-            <div onclick="PonerFicha()" class="casilla"></div>
-            <div onclick="PonerFicha()" class="casilla"></div>
+            <div class="casilla"></div>
+            <div class="casilla"></div>
+            <div class="casilla"></div>
         </div>
     </div>
 </body>
 
-<script src="app.js"></script>
+<script src="TicTacToe.js"></script>
 
 </html>
